# GPAlytics_Backend_LS

./: .env  .env.example  .env.test  .gitignore  IMPLEMENTATION_ANALYSIS.md  PROJECT_STATUS.md  QUICK_COMMANDS.md  README.md  SPEC_KIT_QUICKSTART.md  TESTING_BEST_PRACTICES.md  UNIT_TESTING_GUIDE.md  pyproject.toml  pytest.ini
.specify/memory/: constitution.md
.specify/specifications/001-analytics-endpoint-consolidation/: plan.md  spec.md  tasks.md
.specify/templates/: agent-file-template.md
app/: __init__.py  academic.py  analytics.py  analytics_backup.py  auth.py  auth_backup.py  constants.py  database.py  health.py  main.py  models.py  models_backup.py  profile.py  profile_backup.py  services_backup.py  uploads.py
app/OCR/: __init__.py  helper.py  ocr.py
app/analytics/: __init__.py  controller.py  service.py
app/auth/: __init__.py  controller.py  refresh_service.py  service.py
app/core/: __init__.py  config.py  database.py  exceptions.py  health.py  security.py
app/entities/: __init__.py  grade.py  refresh_token.py  user.py
app/grades/: __init__.py  controller.py  service.py
app/grades/ocr/: __init__.py  service.py
app/users/: __init__.py  controller.py  service.py
app/utils/: __init__.py  app_logging.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml  init-db.sh  init.sql
docs/: ARCHITECTURE_OVERVIEW.md  MERMAID_ARCHITECTURE.md
scripts/: dev.bat  dev.ps1  dev.py  dev.sh  endpoint_map.py  module_map.py  start.bat  test.bat
src/: __init__.py  database.py  main.py  models.py  test.py
src/app/: main.py
src/routers/: __init__.py
src/routers/analytics/: __init__.py  api.py  service.py
src/shared/: config.py  constants.py  database.py  entities.py  exceptions.py  health.py  security.py
tests/: __init__.py  auth_test.py  conftest.py  debug_duplicate.py  debug_login.py  duplicate_upload_test.py  error_handling_test.py  grade_upload_test.py  minimal_login_test.py  system_test.py  test.py  test_auth.py  test_auth_pytest.py  test_db_connection.py  utils.py
tests/helpers/: test_helpers.py
(+25 files in other folders)
